--- a/www/index.html
+++ b/www/index.html
@@ -72,15 +72,17 @@ td {
 <a style='position:fixed; top:0px; left:50%; z-index:1000; background-color:white; font-size:12px; margin-left:-45px; text-align:center; color:black; border-radius:5px;' href='Javascript: show_settings();'><img src='resources/settings_1.png' width=90px><br>პარამეტრები</a>
       
 	<!--                                          zeda meniu -->
-	<div style='position:fixed; left:0px;bottom:0px;width:100%; z-index:211; background-color:white;'><!--background-color:#ffce00;-->
+	<div style='position:fixed; left:0px;bottom:0px;width:99%; z-index:211; background-color:#636469; border:2px solid #f4f400;'><!--background-color:#ffce00;-->
 		<div style='width:100%; height:15px;'></div>
 		
 		
 	<!--									mimartulebis asarchevebi-->
-		<div id='input_boxes' style='float:left; width:81%;'>
-
-			<input id="pac-input" type="text" placeholder="საწყისი მისამართი"  onfocus='setState(0);' onclick='this.select();' style='width: 100%;font-size:14px;padding:10px;background: url(resources/pin_start.svg) no-repeat left top;background-size: 20px 35px;padding-left: 25px;'>				
-			<input id="pac-input2" type="text" placeholder="დანიშნულების მისამართი"  onfocus='setState(1);' onclick='this.select();' style='width: 100%;font-size:14px;padding:10px;background: url(resources/pin_end.svg) no-repeat left top;background-size: 20px 35px;padding-left: 25px;'>
+		<div id='input_boxes' style='float:left; width:100%;'>
+			<center>
+			<input id="pac-input" type="text" placeholder="საწყისი მისამართი"  onfocus='setState(0);' onclick='this.select();' style='width: 90%;font-size:14px;  text-align:Center; background-color:#58b946; color:white; border-radius:15px;'><br>		
+			<img  src='resources/down_arrow.png' height=30px width=20px><br>
+			<input id="pac-input2" type="text" placeholder="დანიშნულების მისამართი"  onfocus='setState(1);' onclick='this.select();' style='width: 90%;font-size:14px;  text-align:Center; background-color:#fdf403; color:#636469; border-radius:15px;'><br><Br>
+			</center>
 		</div>
 
 		<div id='on_call_menu' style='display:none;  background-color:white; float:left; width:75%;'>
@@ -160,7 +162,7 @@ td {
 
 
 <!--		<a id='call_but' style='position:fixed; bottom:0px; left:20%; height:100px; width:60%; z-index:252;' href='Javascript: call_taxi();'><img src='resources/gamodzaxeba.svg' style='width:210px; height:100px;'></a>-->
-	<a id='call_but' style='position:fixed;bottom: 90px;left: 0%;width:90%;z-index:252;background-color:#636469;color:#fdf00b;border: 2px solid #fdf00b;border-radius: 20px; padding: 15px;font-size: 26px; font-weight: bold;  font-family:maincaps;' href='Javascript: call_taxi();'><center><table><tr><td valign=middle><img src='resources/taxi_30.png' height=30px></td><td  valign=middle style='font-size:26px;'> გამოძახება</td></tr></table></center></a>
+	<a id='call_but' style='position:fixed;bottom: 130px;left: 0%;width:90%;z-index:252;background-color:#636469;color:#fdf00b;border: 2px solid #fdf00b;border-radius: 20px; padding: 15px;font-size: 26px; font-weight: bold;  font-family:maincaps;' href='Javascript: call_taxi();'><center><table><tr><td valign=middle><img src='resources/taxi_30.png' height=30px></td><td  valign=middle style='font-size:26px;'> გამოძახება</td></tr></table></center></a>
 
 
 
