--- a/www/index.html
+++ b/www/index.html
@@ -72,7 +72,7 @@ td {
 <a style='position:fixed; top:0px; left:50%; z-index:1000; background-color:white; font-size:12px; margin-left:-45px; text-align:center; color:black; border-radius:5px;' href='Javascript: show_settings();'><img src='resources/settings_1.png' width=90px><br>პარამეტრები</a>
       
 	<!--                                          zeda meniu -->
-	<div style='position:fixed; left:0px;bottom:0px;width:99%; z-index:211; background-color:#636469; border:2px solid #f4f400;'><!--background-color:#ffce00;-->
+	<div style='position:fixed; left:0px;bottom:0px;width:99%; z-index:211; background-color:#636469; border:2px solid #f4f400; display:block;'><!--background-color:#ffce00;-->
 		<div style='width:100%; height:15px;'></div>
 		
 		
@@ -85,10 +85,10 @@ td {
 			</center>
 		</div>
 
-		<div id='on_call_menu' style='display:none;  background-color:white; float:left; width:75%;'>
-<Br>
+		<div id='on_call_menu' style='display:none;  background-color:white; float:left; width:100%; text-align:center; background-color:#f4f400;'>
+
 			<center>
-			<a href='Javascript: cancel_call();' style='background-color:#c72322; padding:10px; padding-left:20px; padding-right:20px; border-radius:20px;'>გაუქმება</a>
+			<a href='Javascript: cancel_call();' style=' border:1px solid #6b6a6f; color:red; border-radius:10px; background-color:white; padding:10px; padding-left:30px; padding-right:30px; text-align:center; font-family:maincaps;'>გაუქმება</a>
 			</center>
 		</div>
 	</div>
@@ -105,22 +105,22 @@ td {
 		</div>
 		
 		<!--							taxi mosulia ekrani -->
-	    <div id='arrived_screen'  style='display:none; position:fixed; top:200px; left:10%;  width:80%;  z-index:300; background-color:white; color:black; border-radius:10px; box-shadow: 4px 4px 23px 0px rgba(0,0,0,0.75); '>
+	    <div id='arrived_screen'  style='display:none; position:fixed; top:200px; left:10%;  width:80%;  z-index:300; background-color:#b3b4b6; color:black; border-radius:10px; border:2px solid #fcee13;'>
 			<br>
 			<center><img src='resources/taxi_icon.png'><br><br>თქვენი ტაქსი ადგილზეა<br><Br>
-			<a href='javascript: chamovdivar();' style='color:white; background-color:green; padding:10px; text-align:center; '>ჩამოვდივარ</a>
+			<a href='javascript: chamovdivar();' style='border:1px solid #6b6a6f; color:#4e4f51; border-radius:10px; background-color:white; padding:10px; padding-left:30px; padding-right:30px; text-align:center; font-family:maincaps; '>ჩამოვდივარ</a>
 			</center>
 			<br><br>
 	    </div>
 
 		
-		<div id='GPS_search_screen'  style='display:inline; position:fixed; top:200px; left:10%;  width:80%; z-index:300; background-color:white; color:black; border-radius:10px; box-shadow: 4px 4px 23px 0px rgba(0,0,0,0.75); '>
+		<div id='GPS_search_screen'  style='display:block; position:fixed; top:200px; left:10%;  width:80%; z-index:300; background-color:#b3b4b6; color:black; border-radius:10px; border:2px solid #fcee13; '>
 			<br>
 			<center><img src='resources/taxi_icon.png'><br><br>მიმდინარეობს თქვენი ლოკაციის დადგენა</center>
 			<Br>
 		</div>
 
-		<div id='taxi_search_screen'  style='display:none; position:fixed; top:200px; left:10%;  width:80%; z-index:300; background-color:white; color:black; border-radius:10px; box-shadow: 4px 4px 23px 0px rgba(0,0,0,0.75); '>
+		<div id='taxi_search_screen'  style='display:none; position:fixed; top:200px; left:10%;  width:80%; z-index:300; background-color:#b3b4b6; color:black; border-radius:10px; border:2px solid #fcee13; '>
 			<br>
 			<center>
 			<div id='savar_fasi'></div><Br>
@@ -130,7 +130,7 @@ td {
 
 		<div id='dirinfo' style='color:black; background-color:white; padding:10px; display:none; position:fixed; top:120px; left:20%;  width:70%; z-index:300; background-color:white; color:black; border-radius:10px; box-shadow: 4px 4px 23px 0px rgba(0,0,0,0.75);'></div>
 
-		<div id='driver_info' style='position:fixed; bottom:30px; left:7%; height:140px; width:80%; z-index:260; color:gray; background-color:white; padding:10px; box-shadow: 4px 4px 23px 0px rgba(0,0,0,0.75); display:none; border-radius:10px;'>
+		<div id='driver_info' style='position:fixed; display:none; bottom:30px; left:7%; height:140px; width:80%; z-index:2650; background-color:#b3b4b6; color:black; border-radius:10px; border:2px solid #fcee13; color:black;'>
 			<a href='Javascript: driver_info_up();' id='uparrow' style='position:absolute; right:20px; top:-15px; z-index:261;'><img src='resources/up.png' width=30px></a>
 			<a href='Javascript: driver_info_down();' id='downarrow' style='position:absolute; right:20px; top:-15px; z-index:261; display:none;'><img src='resources/down.png' width=30px></a>
 			<div id='driver_info_text'>
@@ -138,7 +138,7 @@ td {
 		</div>
 
 
-		<div id='end_screen' style='position:fixed; top:160px;  left:7%; width:80%; z-index:252; color:gray; background-color:white; padding:10px; box-shadow: 4px 4px 23px 0px rgba(0,0,0,0.75); display:none; border-radius:5px; height:300px;'>
+		<div id='end_screen' style='position:fixed; top:160px;  left:7%; width:80%; z-index:252;  background-color:#b3b4b6; color:black; border-radius:10px; border:2px solid #fcee13; display:none; height:300px;'>
 <br><br>
 			<Center>
 			<a href='Javascript: card_pay();' style='background-color:blue; border-radius:5px; padding:10px; color:white; border-radius:5px;'>ბარათით გადახდა</a><Br>
@@ -153,7 +153,7 @@ td {
 				<Td><a href='Javascript: vote(5, 0);'><img id='vote5' src='resources/vote0.png' width=30px></a></td>
 				</tr></table>
 			<br><br>
-			<a href='Javascript: close_end_info();' style='background-color:white; border:1px solid gray; display:block; width:150px; color:black; padding:5px;'>დახურვა</a>
+			<a href='Javascript: close_end_info();' style='border:1px solid #6b6a6f; color:#4e4f51; border-radius:10px; background-color:white; padding:10px; padding-left:30px; padding-right:30px; text-align:center; font-family:maincaps;'>დახურვა</a>
 			
 			<center>
 			<Br><Br>
