--- a/www/index.html
+++ b/www/index.html
@@ -127,7 +127,7 @@ td {
 		<div id='dirinfo' style='color:black; background-color:white; padding:10px; display:none; position:fixed; top:120px; left:20%;  width:70%; z-index:300; background-color:white; color:black; border-radius:10px; box-shadow: 4px 4px 23px 0px rgba(0,0,0,0.75);'></div>
 
      
-		<div id='on_call_menu' style='display:block; left:0px; bottom:135px; position:fixed; z-index:3000; width:100%;'>
+		<div id='on_call_menu' style='display:none; left:0px; bottom:135px; position:fixed; z-index:3000; width:100%;'>
 			<a href='Javascript: chamovdivar();' id='gamovdivar' style='float:left; margin-left:20px; margin-bottom:-15px;'><img src='resources/gamovdivar.png' height=40px></a>
 			<a href='Javascript: wait_for_me();' id='dalodeba' style='float:right; margin-right:20px; margin-bottom:-15px;'><img src='resources/dalodeba.png' height=40px></a>
 			<a href='Javascript: make_call();' id='darekva' style='float:left; margin-left:20px; margin-bottom:-15px;'><img src='resources/dakavshireba.png' height=40px></a>
