--- a/www/index.html
+++ b/www/index.html
@@ -64,7 +64,7 @@ td {
  
 
 	<!--                                          zeda meniu -->
-	<div style='position:absolute; left:0px;bottom:0px;width:99%; z-index:211; background-color:#636469; border:2px solid #f4f400; display:block;'><!--background-color:#ffce00;-->
+	<div style='position:fixed; left:0px;bottom:0px;width:99%; z-index:211; background-color:#636469; border:2px solid #f4f400; display:block;' id='misamartebi'><!--background-color:#ffce00;-->
 
 	
 	<!--									mimartulebis asarchevebi-->
