--- a/www/index.html
+++ b/www/index.html
@@ -60,11 +60,11 @@ td {
 <div id='fanjara' style='position:absolute;left:0px; top:0px; overflow:hidden; width:100%; height:100%;'>
 
 
-	<a style='position:fixed; top:0px; left:50%; z-index:1000; background-color:white; font-size:12px; margin-left:-45px; text-align:center; color:black; border-radius:5px;' href='Javascript: show_settings();'><img src='resources/settings_1.png' width=90px><br>პარამეტრები</a>
+	<a style='position:fixed; top:0px; left:50%; z-index:210; background-color:white; font-size:12px; margin-left:-45px; text-align:center; color:black; border-radius:5px;' href='Javascript: show_settings();'><img src='resources/settings_1.png' width=90px><br>პარამეტრები</a>
  
 
 	<!--                                          zeda meniu -->
-	<div style='position:fixed; left:0px; bottom:0px;width:99%; z-index:211; background-color:#636469; border:2px solid #f4f400; display:block;' id='misamartebi'><!--background-color:#ffce00;-->
+	<div style='position:fixed; left:0px; bottom:0px;width:99%; z-index:211; background-color:#636469; border:2px solid #f4f400; display:block; height:150px;' id='misamartebi'><!--background-color:#ffce00;-->
 
 	
 	<!--									mimartulebis asarchevebi-->
